201412xx; YASW 0.7 (git Master)
 - Fixed buttons background color in Preference Dialog

20141226; YASW 0.6
 - Progress dialogs for long operations
 - Performance optimisation (calculate only when seen on screen or exporting) & bug fixes
 - Removed doxygen documentation as it is not complete. I will comment in the source as much as possible, but
   without the doxygen format.
 - XML Project Files (.yasw) Closes #22 and #25 as a side effect (Loading Project messes up file order)
 - Scaling filter splitted in two - Fixes #19
 - Checkbox "Enable Filter" works now - Fixes #27
 - Changes are now only propagated when a user selects the according button, to avoid unwanted propagations. Fixes #24
 - Migration to Qt5
 - Progress bar when adding multiple images (Fixes #29)

20130629; YASW 0.5
 - Key shortcuts
 - Redesign of the Scaling Filter Widget
 - New policies for propagating changes. I'm not 100% happy as this is quite
   complicated. But I have no other Idea for now... Closes #14
 - Move am image between left and right column. Closes #13
 - Move image selection with arrow keys. Closes #12
 - Segfault when changing settings of a non existent image - Fixes #15
 - QPixmap::scaled: Pixmap is a null pixmap while loading - Fixes #17
 - Fixed #18 Inserted item is selected but does not apear in the filter select
 - Fixed #10 Margins + Positioning

20130601; YASW 0.4
 - Fixed Ticket #2 (Image order not retained when project is reloaded.)
 - Fixed Ticket #1 (Display FileName instead of BaseName in the image list)
 - Fixed Ticket #3 (Propagate settings to all images for one side)
 - Added a background color (configurable) for the filter widgets.
 - Fixed Ticket #11 (Do not interleave pages in PDF Export)
 - Scaling filter
 - Improve PDF Export (a lot!)

20130525; YASW 0.3
 - About dialog
 - open -> recent projects
 - change selection color for dekeystoning and cropping
 - move all corners (dekeystonig, cropping) when pressing "control" while draging one of the corners
